src/App.css
body {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 0; /* We don't use text and we don't want empty space between rows with divs */
  /*font-family: sans-serif;*/
}


.Blurred {
  /* nice magic */
  -webkit-filter: blur(3px);
}


.Dimmed {
  /* nice magic */
  -webkit-filter: brightness(0.5);
}


.AlbumThumbnail {
  margin: 6px;

  /* same as .Picture .... can we inherit? */
  /* box shadow */
  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);

  /* rounder corners */
  border-radius: 1vw
}
.AlbumThumbnail:active {
  -webkit-filter: brightness(0.5);

  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
}


.ImageThumbnail {
  margin: 3px;

  /* same as .Picture .... can we inherit? */
  /* box shadow */
  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);

  /* rounder corners */
  border-radius: 1vw;
}
.ImageThumbnail:active {
  -webkit-filter: brightness(0.5);

  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
}


.CenterBothDirections {
  position:absolute;
  top:50%;
  left:50%;
  -ms-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);

  -webkit-overflow-scrolling: touch;
  overflow: auto;
}


.Image {
  /* box shadow */
  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,0,0,0.6);

  /* rounder corners */
  border-radius: 1vw;

  /* stop scrolling immediately */
  /*overflow-y: hidden;
  -webkit-overflow-scrolling: auto;*/
}
.Image:active {
  -webkit-filter: brightness(0.5);

  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
}


.TheBigRedButton {
  width: 17vw;
  height: 17vw;
  position: fixed;
  top: 0;
  left: 0;
  margin: 1vw;

  /* rounder corners */
  border-radius: 4vw;
}
.TheBigRedButton:active {
  /*top: 0.3vw;
  left: 0.3vw;*/

  -webkit-filter: brightness(0.5);

  -webkit-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  -moz-box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
  box-shadow: 10px 10px 30px 10px rgba(0,255,0,0.6);
}

